--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Икс для VC",
     "short_name": "Икс для VC",
-    "version": "1.1",
+    "version": "1.2",
     "description": "Поможет скрыть неинтересные посты на vc.ru",
     "permissions": [ "storage" ],
     "content_scripts": [
@@ -20,6 +20,11 @@
         "16": "images/img16.png",
         "128": "images/img128.png"
     },           
-    "web_accessible_resources": ["images/*.png"],
-    "manifest_version": 2
+    "web_accessible_resources": [
+        {
+            "resources": [ "images/*.png" ],
+            "matches": [ "https://vc.ru/*" ]
+        }
+    ],
+    "manifest_version": 3
 }
